// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot Tests > About component matches snapshot 1`] = `
<div
  class="flex flex-col items-center justify-center h-screen"
>
  <h1
    class="text-4xl font-bold"
  >
    About Us
  </h1>
  <p
    class="mt-4 text-lg"
  >
    This is the about page of your application.
  </p>
</div>
`;

exports[`Snapshot Tests > AppRoutes with about route matches snapshot 1`] = `
<div
  class="App"
>
  <div
    class="flex flex-col items-center justify-center h-screen"
  >
    <h1
      class="text-4xl font-bold"
    >
      About Us
    </h1>
    <p
      class="mt-4 text-lg"
    >
      This is the about page of your application.
    </p>
  </div>
</div>
`;

exports[`Snapshot Tests > AppRoutes with home route matches snapshot 1`] = `
<div
  class="App"
>
  <div
    class="flex flex-col items-center justify-center h-screen"
  >
    <h1
      class="text-4xl font-bold"
    >
      Welcome to the React Vite TypeScript SPA
    </h1>
    <p
      class="mt-4 text-lg"
    >
      This is the main page of your application.
    </p>
  </div>
</div>
`;

exports[`Snapshot Tests > Home component matches snapshot 1`] = `
<div
  class="flex flex-col items-center justify-center h-screen"
>
  <h1
    class="text-4xl font-bold"
  >
    Welcome to the React Vite TypeScript SPA
  </h1>
  <p
    class="mt-4 text-lg"
  >
    This is the main page of your application.
  </p>
</div>
`;
